<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Lake Mendota Buoy</string>
    <string name="app_version_name">1.3</string>
    <string name="atmosphere">Atmosphere</string>
    <string name="wind_direction_caption">Wind direction</string>
    <string name="wind_speed_caption">Wind speed</string>
    <string name="wind_gust_caption">Wind gust</string>
    <string name="air_temperature_caption">Temperature</string>
    <string name="humidity_caption">Humidity</string>
    <string name="water_temperature">Water Temperature</string>
    <string name="surface_temperature_caption">Surface</string>
    <string name="one_meter_temperature_caption">-1 meters</string>
    <string name="one_meter_temperature_caption_in_feet">-3.3 feet</string>
    <string name="five_meter_temperature_caption">-5 meters</string>
    <string name="five_meter_temperature_caption_in_feet">-16.4 feet</string>
    <string name="ten_meter_temperature_caption">-10 meters</string>
    <string name="ten_meter_temperature_caption_in_feet">-32.8 feet</string>
    <string name="fifteen_meter_temperature_caption">-15 meters</string>
    <string name="fifteen_meter_temperature_caption_in_feet">-49.2 feet</string>
    <string name="twenty_meter_temperature_caption">-20 meters</string>
    <string name="twenty_meter_temperature_caption_in_feet">-65.6 feet</string>
    <string name="additional">Additional</string>
    <string name="message">Message</string>
    <string name="dew_point_caption">Dew point</string>
    <string name="dissolved_oxygen_caption">Oxygen</string>
    <string name="dissolved_oxygen_saturation_caption">Oxygen saturation</string>
    <string name="chlorophyll_caption">Chlorophyll</string>
    <string name="phycocyanin_caption">Phycocyanin</string>
    <string name="updated_at">Last updated</string>
    <string name="unknown_value">-</string>
    <string name="wind_direction_N">N</string>
    <string name="wind_direction_NNE">NNE</string>
    <string name="wind_direction_NE">NE</string>
    <string name="wind_direction_ENE">ENE</string>
    <string name="wind_direction_E">E</string>
    <string name="wind_direction_ESE">ESE</string>
    <string name="wind_direction_SE">SE</string>
    <string name="wind_direction_SSE">SSE</string>
    <string name="wind_direction_S">S</string>
    <string name="wind_direction_SSW">SSW</string>
    <string name="wind_direction_SW">SW</string>
    <string name="wind_direction_WSW">WSW</string>
    <string name="wind_direction_W">W</string>
    <string name="wind_direction_WNW">WNW</string>
    <string name="wind_direction_NW">NW</string>
    <string name="wind_direction_NNW">NNW</string>
    <string name="miles_per_hour_suffix">mph</string>
    <string name="knots_suffix">knots</string>
    <string name="meters_per_second_suffix">m/s</string>
    <string name="percent_suffix">%</string>
    <string name="fahrenheit_suffix">°F</string>
    <string name="celsius_suffix">°C</string>
    <string name="ok">OK</string>
    <string name="action_update">Update</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="pref_distanceUnits">Distance Units</string>
    <string name="pref_distanceUnits_feet">Feet</string>
    <string name="pref_distanceUnits_meters">Meters</string>
    <string name="pref_temperatureUnits">Temperature Units</string>
    <string name="pref_temperatureUnits_fahrenheit">Fahrenheit</string>
    <string name="pref_temperatureUnits_celsius">Celsius</string>
    <string name="pref_windSpeedUnits">Wind Speed Units</string>
    <string name="pref_windSpeedUnits_metersPerSecond">Meters Per Second</string>
    <string name="pref_windSpeedUnits_milesPerHour">Miles Per Hour</string>
    <string name="pref_windSpeedUnits_knots">Knots</string>
    <string name="pref_updateInterval">Update Interval</string>
    <string name="pref_updateInterval_0">When update pressed</string>
    <string name="pref_updateInterval_120000">Every 2 minutes</string>
    <string name="pref_updateInterval_300000">Every 5 minutes</string>
    <string name="pref_updateInterval_600000">Every 10 minutes</string>
    <string name="pref_updateInterval_default">120000</string>
    <string name="pref_display_additional_data">Show all available data</string>
    <string name="error_cannot_show_data">Cannot update data from Lake Mendota Buoy Server:</string>
    <string name="error_no_network_connection">No network connection</string>
    <string name="about_app_name">About Lake Mendota Buoy</string>
    <string name="about_version">Version</string>
    <string name="about_author">Author:</string>
    <string name="about_author_value">Candace Bain</string>
    <string name="about_questions_caption">For questions, comments, and suggestions please visit:</string>
    <string name="about_questions_value">https://github.com/cndbain/lakemendotabuoy/issues</string>
    <string name="about_data_provider">Data provided by Space Science &amp; Engineering Center UW-Madison.</string>
    <string name="about_legal">All rights reserved. Not liable for any damage incurred from use of this software.</string>

</resources>